2010-03-29  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: We need to try looking up attached
	properties with the prop's xmlns even if it is null, if that
	doesn't work then we can try looking up with the element's xmlns.
	Fixes attached properties in the default namespace on custom
	elements.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* Value.cs: Check that the type is non-null before accessing
	  it so we emit the right warning if a type could not be
	  found.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* NativeDependencyObjectHelper.cs: This wasn't supposed to hit
	  SVN.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* ManagedXamlLoader.cs:
	* MoonlightTypeConverter.cs:
	* NativeDependencyObjectHelper.cs: Add enums to our type
	  system so that we don't lose type information when
	  attempting to parse them from xaml.


	* Types.cs: When registering an enum in our type system, make
	  its base type "System.Object" instead of
	  System.Enum/System.ValueType. This simplifies the type
	  system slightly and allows us to easily add enums to
	  properties which are Type::OBJECT. We also need to count all
	  value types (and enums) as having a public ctor.


2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* Value.cs:
	* ManagedXamlLoader.cs:
	* MoonlightTypeConverter.cs:
	* NativeDependencyObjectHelper.cs: Add enums to our type
	  system so that we don't lose type information when
	  attempting to parse them from xaml.


	* Types.cs: When registering an enum in our type system, make
	  its base type "System.Object" instead of
	  System.Enum/System.ValueType. This simplifies the type
	  system slightly and allows us to easily add enums to
	  properties which are Type::OBJECT. We also need to count all
	  value types (and enums) as having a public ctor.


2010-03-26  Jackson Harper  <jackson@ximian.com>

	* ManagedXamlLoader.cs: We should be using the property's xmlns
	here.
