@@ -51,6 +51,7 @@ class AnimationStorage;
 /*DO_FWD_DECLS*/
 
 #if SANITY || DEBUG
+#define checked_get_enum() g_return_val_if_fail (Types::IsSubclassOrSuperclassOf (types, k, Type::ENUM), -1); return u.i64;
 #define checked_get_exact(kind, errval, mem)  g_return_val_if_fail (k == (kind), errval); return mem;
 #define checked_get_subclass(kind, castas) \
 	if (u.dependency_object == NULL || k == (kind)) \
@@ -58,6 +59,7 @@ class AnimationStorage;
 	g_return_val_if_fail (Types::IsSubclassOrSuperclassOf (types, k, kind), NULL); \
 	return (castas*)u.dependency_object;
 #else
+#define checked_get_enum() return u.i64;
 #define checked_get_exact(kind, errval, mem) return mem;
 #define checked_get_subclass(kind, castas) return (castas*)u.dependency_object;
 #endif
@@ -127,6 +129,7 @@ public:
 	bool		AsBool ()	{ checked_get_exact (Type::BOOL, false, (bool)u.i32); }
 	gunichar	AsChar ()       { checked_get_exact (Type::CHAR, 0, u.c); }
 	double 		AsDouble ()	{ checked_get_exact (Type::DOUBLE, 0.0, u.d); }
+	gint64		AsEnum (Types *types = NULL) { checked_get_enum (); }
 	float 		AsFloat ()	{ checked_get_exact (Type::FLOAT, 0.0, u.f); }
 	guint64		AsUInt64 ()	{ checked_get_exact (Type::UINT64, 0, u.ui64); }
 	gint64		AsInt64 ()	{ checked_get_exact (Type::INT64, 0, u.i64); }
