@@ -1,3 +1,9 @@
+2010-03-30  Alan McGovern  <amcgovern@novell.com>
+
+	* type.h.in:
+	* value.h.in: Make System.Enum be the base type of all enums
+	  so we can have a typesafe Value::AsEnum () method in native.
+
 2010-03-30  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* frameworkelement.h: enums.h is in this directory, no need to qualify it with
