@@ -1,3 +1,8 @@
+2010-03-30  Alan McGovern  <amcgovern@novell.com>
+
+	* Types.cs: Make System.Enum be the base type of all enums so
+	  we can have a typesafe Value::AsEnum () method in native.
+
 2010-03-29  Jackson Harper  <jackson@ximian.com>
 
 	* ManagedXamlLoader.cs: We need to try looking up attached
